src/css/style.css
body, html {
    height: 100%;
    margin: 0;
    color: white;
    font-family: monospace;
    font-size: large;
}

* {
    box-sizing: border-box;
}

#backgroundImageDiv {
    background: no-repeat center center fixed;
    display: block;
    left: -5px;
    top: -5px;
    bottom: -5px;
    right: -5px;
    position: fixed;
    z-index: 1;
    filter: blur(5px);
    margin: -5px;
}

#backgroundImage {
    height: 100%;
    width: 100%;
}

.container {
    display: grid;
    position: absolute;
    top: 50%;
    left: 50%;
    z-index: 2;
    background-color: rgb(0, 0, 0, 0.5);
    transform: translate(-50%, -50%);
    width: 80%;
    grid-template-columns: 50% 50%;
}

.block {
    padding: 5%;
}

.block1 {
    grid-column: 1 /span 1;
}

.block2 {
    grid-column: 2 /span 2;
}

#searchHeader {
    display: inline;
    margin-right: 2%;
    width: 30%;
}

#searchInput {
    background-color: rgb(0, 0, 0, 0);
    border: none;
    border-bottom: 2px solid white;
    width: 70%;
    color: white;
    font-family: monospace;
    font-size: xx-large;
}

